$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

September 21, 2010
------------------
#868550 by enzipher, szantog: Added missing brackets in query.
#872294 by merlinofchaos, jeckman: Fixed query part of link for forum views so they can take multiple forum arguments.
#857982 by aenw: Checked if $added is empty rather than !$added.
#908938 by Michelle: Changed how check for node's being displayed as a teaser works.

August 26, 2010 
-------------
#850508 by Michelle: Updated Author Pane template.
NOISSUE by Michelle: Author Pane tokenizing should not happen on topic starting node.

July 11, 2010 
-------------
#768348 by Michelle: Fixed node comment incompatability with new link alter.

July 9, 2010
------------
#571114 by Michelle: Added ability to disable the breadcrumb setting by AF to avoid incompatibility with custom breadcrumbs.
#848964 by vladgur: Fixed 'My posts' view which wasn't showing replies to a topic started by another user.

July 8, 2010
------------
#768348 by Michelle: Moved node/comment link handling to hook_link and hook_link_alter.
#547824 by Michelle: When deleting a node from the node links, it now goes back to the front page like in core.
#757804 by G-son, Michelle: Added back in code for 'new' markers on replies when using core comments that was accidentially removed when making it compatable with node comments.
#831364 by Michelle, smerrill: Removed & from form_state paramater in form_alter to make php 5.3 happy.
#559536 by Michelle: Fixed notices.
#751890 by Michelle: Removed legacy code that was replaced by Views.
#736802 by Michelle: Organized code.

July 5, 2010 - ALPHA 3
------------
#821744 by Michelle: Updated Author Pane integration to work with beta 1.
#830102 by merlinofchaos: Added setting for 'Inject hierarchy of first term into breadcrumb trail' to forum page.
#832286 by Scyther: Allow users to see a signature in an input format they don't have access to.

May 27, 2010
------------