@@ -2,7 +2,6 @@
 name = Advanced Forum
 description = Enables the look and feel of other popular forum software.
 dependencies[] = forum
-dependencies[] = author_pane
 dependencies[] = ctools
 dependencies[] = views
 
